[tool.poetry]
name = "short_url"
version = "0.1.0"
description = ""
authors = ["Robert Rakhmatullin <robertbg4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-WTF = "^1.0.1"
WTForms = "^3.0.1"
SQLAlchemy = "^1.4.41"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
